--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,6 +3,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito+Sans:wght@400;600;700&display=swap');
 
+#blur {
+  transition: all 0.25s ease-out;
+}
+
+.blur {
+  filter: blur(3px);
+}
+
 a {
   transition-delay: 0s !important;
 }
