--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -67,8 +67,7 @@ body {
 
 html {
   box-sizing: border-box;
-  /* overflow-y: hidden; */
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   width: 100%;
   background: #f7f7f7;
 }
