--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,7 @@
 /* LAYOUT AND GRID SYSTEM
 --------------------------------------------------------------- */
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
 
 #blur {
   transition: all 0.25s ease-out;
